plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id "com.google.protobuf" version "0.9.4"
}
group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

ext {
    set('springCloudVersion', "2022.0.3")
    name = 'Composer core'
    description = 'Composer core'
    version='0.0.1-SNAPSHOT'
    sourceEncoding='UTF-8'
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    google()
    mavenCentral()
    maven { url 'https://repo.spring.io/release/' }
    maven { url "https://repo.spring.io/libs-snapshot-local" }
    maven { url "https://repo.spring.io/libs-milestone-local" }
    maven { url "https://repo.spring.io/libs-release-local" }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}
dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.8.1'

    implementation 'org.apache.camel.springboot:camel-jackson-starter:4.0.0-RC1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'net.devh:grpc-client-spring-boot-starter:2.15.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.google.protobuf:protobuf-java:4.0.0-rc-1'
    implementation project(path: ':commons')

    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'org.junit.platform:junit-platform-runner'
    testImplementation 'org.junit.vintage:junit-vintage-engine'
    testImplementation 'org.apache.camel:camel-test-junit5:4.8.1'
    testImplementation 'org.apache.camel:camel-test-spring-junit5:4.8.1'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation "org.mockito:mockito-inline"
}

test {
    useJUnitPlatform()
}

sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}
protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.14.0'
    }

    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.59.0'
        }
    }

    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}


